config/instances/manuela-quickstart/line-dashboard/line-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: line-dashboard
spec:
  template:
    spec:
      containers:
      - name: line-dashboard
        imagePullPolicy: Always
        volumeMounts:
            - mountPath: /opt/app-root/output/conf/config.json
              name: line-dashboard-configmap-vol
              subPath: config.json
