config/instances/manuela-quickstart/line-dashboard/line-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: line-dashboard
spec:
  host: line-dashboard-manuela-quickstart-line-dashboard.apps.staging-aws-edge.aws.css-qe.com
